[gd_scene load_steps=4 format=3 uid="uid://bgf7ork6sg4bu"]

[ext_resource type="Theme" uid="uid://c0jxtn6circlt" path="res://PixelWhiteTheme.tres" id="1_8saeu"]
[ext_resource type="Script" uid="uid://ccwjagrvjwmkg" path="res://Scripts/main_menu.gd" id="1_853f1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8saeu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8saeu")
script = ExtResource("1_853f1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 89.0
offset_right = 481.0
offset_bottom = 301.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -122.0
offset_right = 480.0
offset_bottom = 90.0
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 151.0
theme = ExtResource("1_8saeu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
text = "Mirror
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 151.0
theme = ExtResource("1_8saeu")
theme_override_colors/font_color = Color(0.141176, 0.141176, 0.141176, 1)
theme_override_font_sizes/font_size = 46
text = "
Museum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 201.0
offset_right = 290.0
offset_bottom = 235.0
text = "Start"

[node name="ClearSaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 240.0
offset_right = 290.0
offset_bottom = 274.0
text = "Clear Save"

[node name="ClearSavePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -81.0
offset_right = 150.5
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8saeu")

[node name="Label" type="Label" parent="ClearSavePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.5
offset_right = 52.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Are you sure?"

[node name="ClearSave" type="Button" parent="ClearSavePanel"]
layout_mode = 0
offset_left = 34.0
offset_top = 87.0
offset_right = 120.0
offset_bottom = 121.0
text = "Clear Save"

[node name="Back" type="Button" parent="ClearSavePanel"]
layout_mode = 0
offset_left = 169.0
offset_top = 87.0
offset_right = 258.0
offset_bottom = 121.0
text = "Return"

[node name="ClearedSavePanel" type="Panel" parent="ClearSavePanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -81.0
offset_right = 150.5
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8saeu")

[node name="Label" type="Label" parent="ClearSavePanel/ClearedSavePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 41.0
offset_right = 57.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Save Cleared"

[node name="Back" type="Button" parent="ClearSavePanel/ClearedSavePanel"]
layout_mode = 0
offset_left = 110.5
offset_top = 108.0
offset_right = 199.5
offset_bottom = 142.0
text = "Return"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ClearSaveButton" to="." method="_on_clear_save_button_pressed"]
[connection signal="pressed" from="ClearSavePanel/ClearSave" to="." method="_on_clear_save_pressed"]
[connection signal="pressed" from="ClearSavePanel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ClearSavePanel/ClearedSavePanel/Back" to="." method="_on_back_pressed"]
